force-app/main/default/objects/Examiner_Interaction__c/Examiner_Interaction__c.object-meta.xml
<CustomObject>
    <description>For a Graduate Research Nomination, track interactions between GRS Manager and examiners</description>
    <label>Examiner Interaction</label>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Examiner Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examiner Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>