force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_ASK_Finance_reference_nbr__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ASK_Finance_reference_nbr__c</fullName>
    <inlineHelpText>ASK Finance reference number for the examiner payment</inlineHelpText>
    <label>ASK Finance reference nbr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>