force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Paid/Complete</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Report not received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>