force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Correspondence_Name_and_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Correspondence_Name_and_Title__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Student__r.I_RS_Preferred_Title__c + &quot; &quot; +

I_RS_Graduate_Research_Examination__r.I_RS_Student__r.FirstName + &quot; &quot; +

I_RS_Graduate_Research_Examination__r.I_RS_Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondence Name and Title</label>
    <type>Text</type>
</CustomField>