force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Acknowledged__c</fullName>
    <inlineHelpText>Date the examiner acknowledged receipt of the thesis</inlineHelpText>
    <label>Date Acknowledged</label>
    <type>Date</type>
</CustomField>