force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_invite_response_received__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_invite_response_received__c</fullName>
    <inlineHelpText>Date examiner responded to the invitation to examine</inlineHelpText>
    <label>Date Invite Response Received</label>
    <type>Date</type>
</CustomField>