force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_Invited__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Invited__c</fullName>
    <inlineHelpText>Date examiner was sent the invitation to examine</inlineHelpText>
    <label>Date Invited</label>
    <type>Date</type>
</CustomField>