force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_last_report_reminder__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_last_report_reminder__c</fullName>
    <inlineHelpText>Date of the last reminder sent to the examiner to submit their report. The &apos;Last report reminder type&apos; field specifies which reminder type this was.</inlineHelpText>
    <label>Date Last Report Reminder</label>
    <type>Date</type>
</CustomField>