force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_of_last_acknowledgement_rem__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_of_last_acknowledgement_rem__c</fullName>
    <inlineHelpText>Date of the last reminder sent to the examiner to acknowledge receipt of the report. The &apos;Last acknowledgement reminder type&apos; field specifies which reminder type this was.</inlineHelpText>
    <label>Date of Last Acknowledgement Reminder</label>
    <type>Date</type>
</CustomField>