force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_date_of_last_invitation_reminder__c.field-meta.xml
<CustomField>
    <fullName>I_RS_date_of_last_invitation_reminder__c</fullName>
    <inlineHelpText>Date of the last reminder sent to the examiner to respond to the invitation. The &apos;Last invitation reminder type&apos; field specifies which reminder type this was.</inlineHelpText>
    <label>Date of last Invitation Reminder</label>
    <type>Date</type>
</CustomField>