force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_report_received__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_report_received__c</fullName>
    <inlineHelpText>Date examiner&apos;s report received by GRS.</inlineHelpText>
    <label>Date Report Received</label>
    <type>Date</type>
</CustomField>