force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Date_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Uploaded__c</fullName>
    <inlineHelpText>Date the examiner&apos;s payment request was uploaded to ASK Finance</inlineHelpText>
    <label>Date Uploaded</label>
    <type>Date</type>
</CustomField>