force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Despatch_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Despatch_Date__c</fullName>
    <inlineHelpText>Date the thesis / examinable works were sent to the examiner.</inlineHelpText>
    <label>Despatch Date</label>
    <type>Date</type>
</CustomField>