force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examiner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Examiner Interactions</relationshipLabel>
    <relationshipName>Examiner_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>