force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Email_Address__c</fullName>
    <formula>I_RS_Examiner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Examiner Email Address</label>
    <type>Text</type>
</CustomField>