force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Order__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Order__c</fullName>
    <label>Examiner Invite Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First examiner</fullName>
            </value>
            <value>
                <fullName>Second examiner</fullName>
            </value>
            <value>
                <fullName>Third examiner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>