force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Organisation__c</fullName>
    <formula>I_RS_Examiner__r.I_RS_Organisation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Examiner Organisation</label>
    <type>Text</type>
</CustomField>