force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Phone_Number__c</fullName>
    <formula>I_RS_Examiner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Examiner Phone Number</label>
    <type>Text</type>
</CustomField>