force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Preferred_Name__c</fullName>
    <formula>I_RS_Examiner__r.I_RS_Preferred_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter the examiner preferred name when different to their name in the examiner field.</inlineHelpText>
    <label>Examiner Preferred Name</label>
    <type>Text</type>
</CustomField>