force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Examiner_Preferred_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Examiner_Preferred_Title__c</fullName>
    <formula>I_RS_Examiner__r.I_RS_Preferred_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter the title here if the appropriate title isn&apos;t available in the contact record.</inlineHelpText>
    <label>Examiner Preferred Title</label>
    <type>Text</type>
</CustomField>