force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Graduate_Research_Examination__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination__c</fullName>
    <inlineHelpText>Link to the candidate’s examination record</inlineHelpText>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Examiner Interactions</relationshipLabel>
    <relationshipName>Examiner_Interactions_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>