force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Invitation_Response__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Invitation_Response__c</fullName>
    <inlineHelpText>Indicates whether the examiner has accepted or declined the invitation, or if record is being closed because the examiner is unresponsive.</inlineHelpText>
    <label>Invitation Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>