force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Last_invitation_reminder_type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Last_invitation_reminder_type__c</fullName>
    <inlineHelpText>Invitation reminders are usually sent at 1 and 2 weeks, there is also an option of &apos;other&apos; for any additional reminders</inlineHelpText>
    <label>Last invitation reminder type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 week</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>