force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Last_Report_Reminder_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Last_Report_Reminder_Type__c</fullName>
    <inlineHelpText>Report reminders are usually sent at 4, 7, and 9 weeks, there is also an option of &apos;other&apos; for any additional reminders</inlineHelpText>
    <label>Last Report Reminder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 week</fullName>
            </value>
            <value>
                <fullName>7 week</fullName>
            </value>
            <value>
                <fullName>9 week</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>