force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Link_to_Examination_Material__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Link_to_Examination_Material__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_File_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Examination Material</label>
    <type>Text</type>
</CustomField>