force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Mark__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Mark__c</fullName>
    <inlineHelpText>Examiner&apos;s recommended score out of 100, only required for graded Masters by research degrees.</inlineHelpText>
    <label>Mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>