force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Nancy_Millis_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Nancy_Millis_Recommendation__c</fullName>
    <inlineHelpText>Indication of whether the examiner is recommending the candidate for the Nancy Millis Medal. For PhD only.</inlineHelpText>
    <label>Nancy Millis Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>