force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_New_Examiner_Interaction__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Examiner_Interaction__c</fullName>
    <defaultValue>&quot;A new Examiner Interaction record will be created. You will be able to find it under the &apos;Examiner Interactions&apos; section. Click Save to confirm.&quot;</defaultValue>
    <label>New Examiner Interaction</label>
    <type>TextArea</type>
</CustomField>