force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Other_Examination_Requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Examination_Requirements__c</fullName>
    <inlineHelpText>Used to capture the examiner recommendations for any additional examination requirements e.g. for some joint degrees.</inlineHelpText>
    <label>Other Examination Requirements</label>
    <type>TextArea</type>
</CustomField>