force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Payment_amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Payment_amount__c</fullName>
    <inlineHelpText>Amount paid to the examiner for conducting the examination</inlineHelpText>
    <label>Payment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>