force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Principal_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Principal_Supervisor__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Principal_Supervisor__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Supervisor</label>
    <type>Text</type>
</CustomField>