force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Recommendation__c</fullName>
    <inlineHelpText>Examiner&apos;s recommended outcome</inlineHelpText>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass with no amendments</fullName>
            </value>
            <value>
                <fullName>Pass with minor amendments</fullName>
            </value>
            <value>
                <fullName>Pass with major amendments</fullName>
            </value>
            <value>
                <fullName>Deferral – no alternate recommended</fullName>
            </value>
            <value>
                <fullName>Deferral – masters standard</fullName>
            </value>
            <value>
                <fullName>Pass after re-examination</fullName>
            </value>
            <value>
                <fullName>Do not award doctorate - masters standard</fullName>
            </value>
            <value>
                <fullName>Do not award the degree (fail)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>