force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Report_Due_Date__c</fullName>
    <inlineHelpText>Date the examiner is due to send back their completed report by. Usually 6 weeks from despatch date but may be adjusted if they ask for more time</inlineHelpText>
    <label>Date Report Due</label>
    <type>Date</type>
</CustomField>