force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Repository_User_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Repository_User_Name__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Repository_User_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repository Login</label>
    <type>Text</type>
</CustomField>