force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Special_Requirements__c</fullName>
    <inlineHelpText>Used to record any special requirements the examiner has, such as if they require a hard copy of the thesis</inlineHelpText>
    <label>Special Requirements</label>
    <type>TextArea</type>
</CustomField>