force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <label>Awaiting response</label>
            </value>
            <value>
                <fullName>Material sent</fullName>
                <label>Awaiting material</label>
            </value>
            <value>
                <fullName>Report received</fullName>
                <label>Awaiting report</label>
            </value>
            <value>
                <fullName>Payment processed</fullName>
                <label>Payment processing</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Nominated</fullName>
                <isActive>false</isActive>
                <label>Nominated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>