force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Thesis_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Mailing_City__c</fullName>
    <label>Thesis Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>