force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Thesis_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Mailing_Country__c</fullName>
    <defaultValue>&quot;Australia&quot;</defaultValue>
    <label>Thesis Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>