force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Thesis_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Mailing_Street__c</fullName>
    <label>Thesis Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>