force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Thesis_Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Mailing_Zip_Postal_Code__c</fullName>
    <label>Thesis Mailing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>