force-app/main/default/objects/Examiner_Interaction__c/fields/I_RS_Thesis_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_Submission_Date__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Anticipated_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thesis Submission Date</label>
    <type>Date</type>
</CustomField>