force-app/main/default/objects/Examiner_Interaction__c/fields/Thesis_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Thesis_Mailing_Address__c</fullName>
    <label>Thesis Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>