force-app/main/default/objects/Examiner_Interaction__c/validationRules/Mark_must_be_between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_must_be_between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>I_RS_Mark__c &lt; 0 ||
I_RS_Mark__c &gt; 100</errorConditionFormula>
    <errorDisplayField>I_RS_Mark__c</errorDisplayField>
    <errorMessage>Mark must be between 0-100</errorMessage>
</ValidationRule>